--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -2,3 +2,4 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="YgPvfQF8psfIVdDX9XDNMEy3yXvURFKvyv7iwwZuEAc" />
